--- a/marine_learning/client/public/index.html
+++ b/marine_learning/client/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Dancing+Script&family=Happy+Monkey&family=Lobster&family=Rubik+Vinyl&family=Zen+Dots&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Dancing+Script&family=Bubblegum+Sans&family=Happy+Monkey&family=Lobster&family=Rubik+Vinyl&family=Zen+Dots&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
